# RecycleViewCard

./: README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/cat/jason/composecardactivity/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ImageProcessor.cpp
app/src/main/java/cat/jason/sharecard/: CardAdapter.kt  CardRecyclerView.kt  CardSpacingDecoration.kt  CardStackLayoutManager.kt  CardViewHolder.kt  DrawUtils.kt  GyroscopeSensorEventListener.kt  HeightChangingScrollListener.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml  card_item_layout.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/cat/jason/composecardactivity/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
